libs/dslparser/dslparser/common/CommonDeclParser.cpp

// Generated from C:/Users/mre/Documents/Repositories/tfvs/mbtcreator/3rd/mobata/libs/dslparser/dslparser/grammars/CommonDecl.g4 by ANTLR 4.7.2


#include "CommonDeclListener.h"

#include "CommonDeclParser.h"


using namespace antlrcpp;
using namespace antlr4;

CommonDeclParser::CommonDeclParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

CommonDeclParser::~CommonDeclParser() {
  delete _interpreter;
}

std::string CommonDeclParser::getGrammarFileName() const {
  return "CommonDecl.g4";
}

const std::vector<std::string>& CommonDeclParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& CommonDeclParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ComponentIdPathContext ------------------------------------------------------------------

CommonDeclParser::ComponentIdPathContext::ComponentIdPathContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CommonDeclParser::ContextIDContext *> CommonDeclParser::ComponentIdPathContext::contextID() {
  return getRuleContexts<CommonDeclParser::ContextIDContext>();
}

CommonDeclParser::ContextIDContext* CommonDeclParser::ComponentIdPathContext::contextID(size_t i) {
  return getRuleContext<CommonDeclParser::ContextIDContext>(i);
}

std::vector<tree::TerminalNode *> CommonDeclParser::ComponentIdPathContext::DOT() {
  return getTokens(CommonDeclParser::DOT);
}

tree::TerminalNode* CommonDeclParser::ComponentIdPathContext::DOT(size_t i) {
  return getToken(CommonDeclParser::DOT, i);
}


size_t CommonDeclParser::ComponentIdPathContext::getRuleIndex() const {
  return CommonDeclParser::RuleComponentIdPath;
}

void CommonDeclParser::ComponentIdPathContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComponentIdPath(this);
}

void CommonDeclParser::ComponentIdPathContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComponentIdPath(this);
}

CommonDeclParser::ComponentIdPathContext* CommonDeclParser::componentIdPath() {
  ComponentIdPathContext *_localctx = _tracker.createInstance<ComponentIdPathContext>(_ctx, getState());
  enterRule(_localctx, 0, CommonDeclParser::RuleComponentIdPath);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    contextID();
    setState(117);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CommonDeclParser::DOT) {
      setState(113);
      match(CommonDeclParser::DOT);
      setState(114);
      contextID();
      setState(119);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignalIdPathContext ------------------------------------------------------------------

CommonDeclParser::SignalIdPathContext::SignalIdPathContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CommonDeclParser::ContextIDContext *> CommonDeclParser::SignalIdPathContext::contextID() {
  return getRuleContexts<CommonDeclParser::ContextIDContext>();
}

CommonDeclParser::ContextIDContext* CommonDeclParser::SignalIdPathContext::contextID(size_t i) {
  return getRuleContext<CommonDeclParser::ContextIDContext>(i);
}

std::vector<tree::TerminalNode *> CommonDeclParser::SignalIdPathContext::DOT() {
  return getTokens(CommonDeclParser::DOT);
}

tree::TerminalNode* CommonDeclParser::SignalIdPathContext::DOT(size_t i) {
  return getToken(CommonDeclParser::DOT, i);
}


size_t CommonDeclParser::SignalIdPathContext::getRuleIndex() const {
  return CommonDeclParser::RuleSignalIdPath;
}

void CommonDeclParser::SignalIdPathContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSignalIdPath(this);
}

void CommonDeclParser::SignalIdPathContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSignalIdPath(this);
}

CommonDeclParser::SignalIdPathContext* CommonDeclParser::signalIdPath() {
  SignalIdPathContext *_localctx = _tracker.createInstance<SignalIdPathContext>(_ctx, getState());
  enterRule(_localctx, 2, CommonDeclParser::RuleSignalIdPath);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    contextID();
    setState(125);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CommonDeclParser::DOT) {
      setState(121);
      match(CommonDeclParser::DOT);
      setState(122);
      contextID();
      setState(127);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeIdPathContext ------------------------------------------------------------------

CommonDeclParser::AttributeIdPathContext::AttributeIdPathContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CommonDeclParser::AttributeNameContext* CommonDeclParser::AttributeIdPathContext::attributeName() {
  return getRuleContext<CommonDeclParser::AttributeNameContext>(0);
}

std::vector<CommonDeclParser::ContextIDContext *> CommonDeclParser::AttributeIdPathContext::contextID() {
  return getRuleContexts<CommonDeclParser::ContextIDContext>();
}

CommonDeclParser::ContextIDContext* CommonDeclParser::AttributeIdPathContext::contextID(size_t i) {
  return getRuleContext<CommonDeclParser::ContextIDContext>(i);
}

std::vector<tree::TerminalNode *> CommonDeclParser::AttributeIdPathContext::DOT() {
  return getTokens(CommonDeclParser::DOT);
}

tree::TerminalNode* CommonDeclParser::AttributeIdPathContext::DOT(size_t i) {
  return getToken(CommonDeclParser::DOT, i);
}


size_t CommonDeclParser::AttributeIdPathContext::getRuleIndex() const {
  return CommonDeclParser::RuleAttributeIdPath;
}

void CommonDeclParser::AttributeIdPathContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttributeIdPath(this);
}

void CommonDeclParser::AttributeIdPathContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttributeIdPath(this);
}

CommonDeclParser::AttributeIdPathContext* CommonDeclParser::attributeIdPath() {
  AttributeIdPathContext *_localctx = _tracker.createInstance<AttributeIdPathContext>(_ctx, getState());
  enterRule(_localctx, 4, CommonDeclParser::RuleAttributeIdPath);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(137);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(128);
      attributeName();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(129);
      contextID();
      setState(134);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == CommonDeclParser::DOT) {
        setState(130);
        match(CommonDeclParser::DOT);
        setState(131);
        contextID();
        setState(136);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignalSendContext ------------------------------------------------------------------

CommonDeclParser::SignalSendContext::SignalSendContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CommonDeclParser::SignalIdPathContext* CommonDeclParser::SignalSendContext::signalIdPath() {
  return getRuleContext<CommonDeclParser::SignalIdPathContext>(0);
}

tree::TerminalNode* CommonDeclParser::SignalSendContext::LPAREN() {
  return getToken(CommonDeclParser::LPAREN, 0);
}

CommonDeclParser::FunctionCallBodyContext* CommonDeclParser::SignalSendContext::functionCallBody() {
  return getRuleContext<CommonDeclParser::FunctionCallBodyContext>(0);
}

tree::TerminalNode* CommonDeclParser::SignalSendContext::RPAREN() {
  return getToken(CommonDeclParser::RPAREN, 0);
}


size_t CommonDeclParser::SignalSendContext::getRuleIndex() const {
  return CommonDeclParser::RuleSignalSend;
}

void CommonDeclParser::SignalSendContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSignalSend(this);
}

void CommonDeclParser::SignalSendContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSignalSend(this);
}

CommonDeclParser::SignalSendContext* CommonDeclParser::signalSend() {
  SignalSendContext *_localctx = _tracker.createInstance<SignalSendContext>(_ctx, getState());
  enterRule(_localctx, 6, CommonDeclParser::RuleSignalSend);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(139);
    signalIdPath();
    setState(140);
    match(CommonDeclParser::LPAREN);
    setState(141);
    functionCallBody();
    setState(142);
    match(CommonDeclParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommonDeclContext ------------------------------------------------------------------

CommonDeclParser::CommonDeclContext::CommonDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CommonDeclParser::TypeDefDeclContext *> CommonDeclParser::CommonDeclContext::typeDefDecl() {
  return getRuleContexts<CommonDeclParser::TypeDefDeclContext>();
}

CommonDeclParser::TypeDefDeclContext* CommonDeclParser::CommonDeclContext::typeDefDecl(size_t i) {
  return getRuleContext<CommonDeclParser::TypeDefDeclContext>(i);
}

std::vector<CommonDeclParser::AttributeDeclContext *> CommonDeclParser::CommonDeclContext::attributeDecl() {
  return getRuleContexts<CommonDeclParser::AttributeDeclContext>();
}

CommonDeclParser::AttributeDeclContext* CommonDeclParser::CommonDeclContext::attributeDecl(size_t i) {
  return getRuleContext<CommonDeclParser::AttributeDeclContext>(i);
}

std::vector<CommonDeclParser::SignalDeclContext *> CommonDeclParser::CommonDeclContext::signalDecl() {
  return getRuleContexts<CommonDeclParser::SignalDeclContext>();
}

CommonDeclParser::SignalDeclContext* CommonDeclParser::CommonDeclContext::signalDecl(size_t i) {
  return getRuleContext<CommonDeclParser::SignalDeclContext>(i);
}


size_t CommonDeclParser::CommonDeclContext::getRuleIndex() const {
  return CommonDeclParser::RuleCommonDecl;
}

void CommonDeclParser::CommonDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCommonDecl(this);
}

void CommonDeclParser::CommonDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCommonDecl(this);
}

CommonDeclParser::CommonDeclContext* CommonDeclParser::commonDecl() {
  CommonDeclContext *_localctx = _tracker.createInstance<CommonDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, CommonDeclParser::RuleCommonDecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(149);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CommonDeclParser::TypeID)
      | (1ULL << CommonDeclParser::AttributeID)
      | (1ULL << CommonDeclParser::SignalID))) != 0)) {
      setState(147);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case CommonDeclParser::TypeID: {
          setState(144);
          typeDefDecl();
          break;
        }

        case CommonDeclParser::AttributeID: {
          setState(145);
          attributeDecl();
          break;
        }

        case CommonDeclParser::SignalID: {
          setState(146);
          signalDecl();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(151);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportPathDeclContext ------------------------------------------------------------------

CommonDeclParser::ImportPathDeclContext::ImportPathDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CommonDeclParser::ImportPathBodyContext* CommonDeclParser::ImportPathDeclContext::importPathBody() {
  return getRuleContext<CommonDeclParser::ImportPathBodyContext>(0);
}

CommonDeclParser::ImportPathDeclContext* CommonDeclParser::ImportPathDeclContext::importPathDecl() {
  return getRuleContext<CommonDeclParser::ImportPathDeclContext>(0);
}


size_t CommonDeclParser::ImportPathDeclContext::getRuleIndex() const {
  return CommonDeclParser::RuleImportPathDecl;
}

void CommonDeclParser::ImportPathDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportPathDecl(this);
}

void CommonDeclParser::ImportPathDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportPathDecl(this);
}

CommonDeclParser::ImportPathDeclContext* CommonDeclParser::importPathDecl() {
  ImportPathDeclContext *_localctx = _tracker.createInstance<ImportPathDeclContext>(_ctx, getState());
  enterRule(_localctx, 10, CommonDeclParser::RuleImportPathDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(156);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(152);
      importPathBody();
      setState(153);
      importPathDecl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);

      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportPathBodyContext ------------------------------------------------------------------

CommonDeclParser::ImportPathBodyContext::ImportPathBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CommonDeclParser::ImportPathBodyContext::ImportID() {
  return getToken(CommonDeclParser::ImportID, 0);
}

tree::TerminalNode* CommonDeclParser::ImportPathBodyContext::LESSTHAN() {
  return getToken(CommonDeclParser::LESSTHAN, 0);
}

CommonDeclParser::ImportFileBodyContext* CommonDeclParser::ImportPathBodyContext::importFileBody() {
  return getRuleContext<CommonDeclParser::ImportFileBodyContext>(0);
}

tree::TerminalNode* CommonDeclParser::ImportPathBodyContext::GREATERTHAN() {
  return getToken(CommonDeclParser::GREATERTHAN, 0);
}

CommonDeclParser::ImportAsContext* CommonDeclParser::ImportPathBodyContext::importAs() {
  return getRuleContext<CommonDeclParser::ImportAsContext>(0);
}


size_t CommonDeclParser::ImportPathBodyContext::getRuleIndex() const {
  return CommonDeclParser::RuleImportPathBody;
}

void CommonDeclParser::ImportPathBodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportPathBody(this);
}

void CommonDeclParser::ImportPathBodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportPathBody(this);
}

CommonDeclParser::ImportPathBodyContext* CommonDeclParser::importPathBody() {
  ImportPathBodyContext *_localctx = _tracker.createInstance<ImportPathBodyContext>(_ctx, getState());
  enterRule(_localctx, 12, CommonDeclParser::RuleImportPathBody);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(158);
    match(CommonDeclParser::ImportID);
    setState(159);
    match(CommonDeclParser::LESSTHAN);
    setState(160);
    importFileBody();
    setState(161);
    match(CommonDeclParser::GREATERTHAN);
    setState(162);
    importAs();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportFileBodyContext ------------------------------------------------------------------

CommonDeclParser::ImportFileBodyContext::ImportFileBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CommonDeclParser::ContextIDContext *> CommonDeclParser::ImportFileBodyContext::contextID() {
  return getRuleContexts<CommonDeclParser::ContextIDContext>();
}

CommonDeclParser::ContextIDContext* CommonDeclParser::ImportFileBodyContext::contextID(size_t i) {
  return getRuleContext<CommonDeclParser::ContextIDContext>(i);
}

tree::TerminalNode* CommonDeclParser::ImportFileBodyContext::DOT() {
  return getToken(CommonDeclParser::DOT, 0);
}

tree::TerminalNode* CommonDeclParser::ImportFileBodyContext::RANGE() {
  return getToken(CommonDeclParser::RANGE, 0);
}

tree::TerminalNode* CommonDeclParser::ImportFileBodyContext::DIV() {
  return getToken(CommonDeclParser::DIV, 0);
}

CommonDeclParser::ImportFileBodyContext* CommonDeclParser::ImportFileBodyContext::importFileBody() {
  return getRuleContext<CommonDeclParser::ImportFileBodyContext>(0);
}


size_t CommonDeclParser::ImportFileBodyContext::getRuleIndex() const {
  return CommonDeclParser::RuleImportFileBody;
}

void CommonDeclParser::ImportFileBodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportFileBody(this);
}

void CommonDeclParser::ImportFileBodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportFileBody(this);
}

CommonDeclParser::ImportFileBodyContext* CommonDeclParser::importFileBody() {
  ImportFileBodyContext *_localctx = _tracker.createInstance<ImportFileBodyContext>(_ctx, getState());
  enterRule(_localctx, 14, CommonDeclParser::RuleImportFileBody);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(175);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(164);
      contextID();
      setState(165);
      match(CommonDeclParser::DOT);
      setState(166);
      contextID();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(168);
      match(CommonDeclParser::RANGE);
      setState(169);
      match(CommonDeclParser::DIV);
      setState(170);
      importFileBody();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(171);
      contextID();
      setState(172);
      match(CommonDeclParser::DIV);
      setState(173);
      importFileBody();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportAsContext ------------------------------------------------------------------

CommonDeclParser::ImportAsContext::ImportAsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CommonDeclParser::ImportAsContext::AsID() {
  return getToken(CommonDeclParser::AsID, 0);
}

CommonDeclParser::ContextIDContext* CommonDeclParser::ImportAsContext::contextID() {
  return getRuleContext<CommonDeclParser::ContextIDContext>(0);
}


size_t CommonDeclParser::ImportAsContext::getRuleIndex() const {
  return CommonDeclParser::RuleImportAs;
}

void CommonDeclParser::ImportAsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportAs(this);
}

void CommonDeclParser::ImportAsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportAs(this);
}

CommonDeclParser::ImportAsContext* CommonDeclParser::importAs() {
  ImportAsContext *_localctx = _tracker.createInstance<ImportAsContext>(_ctx, getState());
  enterRule(_localctx, 16, CommonDeclParser::RuleImportAs);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(180);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CommonDeclParser::AsID: {
        enterOuterAlt(_localctx, 1);
        setState(177);
        match(CommonDeclParser::AsID);
        setState(178);
        contextID();
        break;
      }

      case CommonDeclParser::ImportID: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDefDeclContext ------------------------------------------------------------------

CommonDeclParser::TypeDefDeclContext::TypeDefDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CommonDeclParser::TypeDefDeclContext::TypeID() {
  return getToken(CommonDeclParser::TypeID, 0);
}

CommonDeclParser::TypeDeclContext* CommonDeclParser::TypeDefDeclContext::typeDecl() {
  return getRuleContext<CommonDeclParser::TypeDeclContext>(0);
}

CommonDeclParser::ContextIDContext* CommonDeclParser::TypeDefDeclContext::contextID() {
  return getRuleContext<CommonDeclParser::ContextIDContext>(0);
}

tree::TerminalNode* CommonDeclParser::TypeDefDeclContext::SEMI() {
  return getToken(CommonDeclParser::SEMI, 0);
}


size_t CommonDeclParser::TypeDefDeclContext::getRuleIndex() const {
  return CommonDeclParser::RuleTypeDefDecl;
}

void CommonDeclParser::TypeDefDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeDefDecl(this);
}

void CommonDeclParser::TypeDefDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeDefDecl(this);
}

CommonDeclParser::TypeDefDeclContext* CommonDeclParser::typeDefDecl() {
  TypeDefDeclContext *_localctx = _tracker.createInstance<TypeDefDeclContext>(_ctx, getState());
  enterRule(_localctx, 18, CommonDeclParser::RuleTypeDefDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(182);
    match(CommonDeclParser::TypeID);
    setState(183);
    typeDecl();
    setState(184);
    contextID();
    setState(185);
    match(CommonDeclParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDeclContext ------------------------------------------------------------------

CommonDeclParser::TypeDeclContext::TypeDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CommonDeclParser::IntTypeDeclContext* CommonDeclParser::TypeDeclContext::intTypeDecl() {
  return getRuleContext<CommonDeclParser::IntTypeDeclContext>(0);
}

CommonDeclParser::RealTypeDeclContext* CommonDeclParser::TypeDeclContext::realTypeDecl() {
  return getRuleContext<CommonDeclParser::RealTypeDeclContext>(0);
}

CommonDeclParser::EnumTypeDeclContext* CommonDeclParser::TypeDeclContext::enumTypeDecl() {
  return getRuleContext<CommonDeclParser::EnumTypeDeclContext>(0);
}

tree::TerminalNode* CommonDeclParser::TypeDeclContext::BoolID() {
  return getToken(CommonDeclParser::BoolID, 0);
}

tree::TerminalNode* CommonDeclParser::TypeDeclContext::StringID() {
  return getToken(CommonDeclParser::StringID, 0);
}

CommonDeclParser::ContextIDContext* CommonDeclParser::TypeDeclContext::contextID() {
  return getRuleContext<CommonDeclParser::ContextIDContext>(0);
}


size_t CommonDeclParser::TypeDeclContext::getRuleIndex() const {
  return CommonDeclParser::RuleTypeDecl;
}

void CommonDeclParser::TypeDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CommonDeclListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeDecl(this);
}
